k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tree-planting-ingress
  namespace: tree-planting
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.thaanees.local
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
